source/blender/makesrna/intern/rna_object.cc
@@ -1120,13 +1120,15 @@ static int rna_Object_active_material_index_get(PointerRNA *ptr)
 static void rna_Object_active_material_index_set(PointerRNA *ptr, int value)
 {
   Object *ob = reinterpret_cast<Object *>(ptr->owner_id);
-  ob->actcol = value + 1;
+
+  ob->actcol = min_ii(ob->totcol, value + 1);
+  ob->actcol = max_ii(ob->actcol, 0);
 
   if (ob->type == OB_MESH) {
     Mesh *mesh = static_cast<Mesh *>(ob->data);
 
     if (mesh->runtime->edit_mesh) {
-      mesh->runtime->edit_mesh->mat_nr = value;
+      mesh->runtime->edit_mesh->mat_nr = ob->actcol;
     }
   }
 }
